--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "createCollection": "node src/createCollection.js"
   },
   "author": "Softwire",
   "license": "UNLICENSED",
