--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Softwire",
   "license": "UNLICENSED",
   "dependencies": {
+    "assert": "^2.0.0",
     "mongodb": "^3.0.6",
     "yargs": "^11.0.0"
   }
